Fix text overflow in Cart SVGs counter

--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -20,12 +20,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 18px;
-  height: 18px;
+  width: 24px;
+  height: 24px;
   background-color: var(--primary);
   color: var(--white);
   font-weight: 700;
   border-radius: 50%;
-  top: 0;
-  right: 0;
+  top: -5px;
+  right: -5px;
 }
